# stellar-zk-notes

./: .gitignore  .gitmodules  README.md  SECURITY.md
contracts/contracts/vault/: Cargo.toml
contracts/contracts/vault/src/: lib.rs  merkle.rs  pool.rs  storage.rs  test.rs  verifier.rs
contracts/contracts/vault/test_snapshots/test/: deposit_increments_leaf_count.1.json  deposit_increments_pool_leaf_count.1.json  double_spend_nullifier_reverts.1.json  exit_pool_emits_no_recipient.1.json  exit_pool_transfers_to_recipient_and_relayer.1.json  exit_pool_wrong_exit_hash_reverts.1.json  exit_reverts_when_pool_below_min_size.1.json  initialize_sets_empty_tree.1.json  join_pool_emits_no_depositor.1.json  join_pool_increments_pool_leaf_count.1.json  join_pool_transfers_fixed_amount.1.json  pool_leaf_count_starts_at_zero.1.json  register_and_read_shielded_key.1.json  register_shielded_key_requires_auth.1.json  reject_verifier_blocks_exit.1.json  reject_verifier_blocks_spend.1.json  shielded_send_empty_encrypted_reverts.1.json  shielded_send_records_nullifier_and_new_commitment.1.json  shielded_transfer_2_outputs.1.json  shielded_transfer_records_nullifier_and_commitment.1.json  spend_reverts_when_pool_below_min_size.1.json  stale_merkle_root_reverts.1.json  withdraw_transfers_tokens_to_recipient.1.json
docs/: architecture.md  demo-script-en.md  deploy.md  threat-model.md
scripts/: build_ultrahonk_verifier.sh  build_vk_pool_actions.sh  build_vk_transfer_actions.sh  compute_commitment.sh  compute_nullifier.sh  demo.sh  deploy_testnet.sh  e2e_localnet.sh  e2e_testnet.sh  (+23 more)
(+142 files in other folders)
